# workshop_cleaner

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: code_quality.yaml
workshop_cleaner-cli/: Cargo.toml
workshop_cleaner-cli/src/: io.rs  main.rs  steam.rs  workshop.rs
workshop_cleaner-cli/src/model/: app_details.rs  mod.rs  workshop_item.rs
workshop_cleaner-core/: Cargo.toml
workshop_cleaner-core/src/: cleaner.rs  lib.rs  locator.rs
workshop_cleaner-gui/: Cargo.toml  build.rs
workshop_cleaner-gui/src/: cmd.rs  delegate.rs  main.rs  steam.rs
workshop_cleaner-gui/src/controller/: app_list.rs  main.rs  mod.rs
workshop_cleaner-gui/src/data/: app_state.rs  mod.rs  steam.rs
workshop_cleaner-gui/src/ui/: theme.rs
workshop_cleaner-gui/src/widget/: list.rs  mod.rs  spinner.rs  stacked_container.rs
