[package]
name = "workshop_cleaner-cli"
version = "0.0.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workshop_cleaner-core = { path = "../workshop_cleaner-core" }

dialoguer = "0.8.0"
steam-workshop-api = "0.2.5"
humansize = "1.1.1"
