[package]
name = "workshop_cleaner-gui"
version = "0.0.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workshop_cleaner-core = { path = "../workshop_cleaner-core" }

druid = { version = "0.7.0", features = ["im"]}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
